# tagger

./: ChangeLog.md  LICENSE  Main.hs  Tagger.hs  Tests.hs  cabal.sandbox.config  tagger.cabal  tagger.hs  tagger.sh
.cabal-sandbox/: add-source-timestamps  world
.cabal-sandbox/aarch64-linux-ghc-8.4.4-packages.conf.d/: MissingH-1.4.2.0-E90JLKFLRfY4ypznRL4S.conf  data-accessor-0.2.3-KHFqc4FnBu6LcG2RTN05Zr.conf  hslogger-1.3.1.0-IaP1fR7QRHn78ddkbRKRec.conf  idiii-0.1.3.3-DnV35cxx1PWFsO4BbBGPAB.conf  network-3.1.1.1-GJG6zzLXCzi5XF9TpznpJh.conf  network-bsd-2.8.1.0-E4Z4zBcbqGFLq3uc0mgQIX.conf  old-locale-1.0.0.7-26K7wLFR2jK44UeOklvTCh.conf  old-time-1.1.0.3-2H7uVRdRD4GDRLoYt56mwc.conf  package.cache  polyparse-1.13-BFoLwHZsL9d2CW6iq4M5so.conf  random-1.1-9LLJAJa4iQFLJiLXBOBXBV.conf  regex-base-0.94.0.0-Fc41NQuXaU78pYWfcGxWVo.conf  regex-compat-0.95.2.0-57nqQNWnPpe6UQuADvv9NR.conf  regex-posix-0.96.0.0-C0YvX23jwL76t1xEnMbG1b.conf  utf8-string-1.0.1.1-LRSjvSC6FZkKPp48Qszoj8.conf
.cabal-sandbox/lib/aarch64-linux-ghc-8.4.4/MissingH-1.4.2.0-E90JLKFLRfY4ypznRL4S/Data/: BinPacking.dyn_hi  BinPacking.hi  (+4 more)
.cabal-sandbox/lib/aarch64-linux-ghc-8.4.4/hslogger-1.3.1.0-IaP1fR7QRHn78ddkbRKRec/: UTF8.dyn_hi  UTF8.hi
.cabal-sandbox/lib/aarch64-linux-ghc-8.4.4/idiii-0.1.3.3-DnV35cxx1PWFsO4BbBGPAB/: ID3.dyn_hi  ID3.hi
.cabal-sandbox/lib/aarch64-linux-ghc-8.4.4/regex-base-0.94.0.0-Fc41NQuXaU78pYWfcGxWVo/: Paths_regex_base.dyn_hi  Paths_regex_base.hi
.cabal-sandbox/lib/aarch64-linux-ghc-8.4.4/regex-posix-0.96.0.0-C0YvX23jwL76t1xEnMbG1b/: Paths_regex_posix.dyn_hi  Paths_regex_posix.hi
(+284 files in other folders)
