name:                tagger
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Robin Bisho
maintainer:          robinbisho@gmail.com
-- copyright:
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable tagger
  main-is:             Main.hs
  other-modules:       Tagger
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , text
                     , idiii
                     , process
  -- hs-source-dirs:
  default-language:    Haskell2010
